--- a/Localization- Basic.ipynb
+++ b/Localization- Basic.ipynb
@@ -11,12 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1 Helpful function "
+    "### 1.1 Measurement"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        " 0.1111111111111111]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -101,8 +101,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 Motion"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,30 +133,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3 Measurement and motion cycles"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.20000000000000365, 0.20000000000000373, 0.20000000000000365, 0.2000000000000035, 0.2000000000000035]\n"
+      "[0.07882352941176471, 0.07529411764705884, 0.22470588235294123, 0.4329411764705882, 0.18823529411764706]\n"
      ]
     }
    ],
    "source": [
-    "p=[0, 1, 0, 0, 0]\n",
+    "p=[0.2, 0.2, 0.2, 0.2, 0.2]\n",
     "world=['green', 'red', 'red', 'green', 'green']\n",
-    "measurements = ['red', 'green']\n",
+    "measurements = ['red', 'red']\n",
+    "motions = [1,1]\n",
     "pHit = 0.6\n",
     "pMiss = 0.2\n",
     "pExact = 0.8\n",
     "pOvershoot = 0.1\n",
     "pUndershoot = 0.1\n",
-    "for i in range(100000):\n",
-    "    p = move(p,1)\n",
-    "print(p)"
+    "\n",
+    "for i in range(len(motions)):     # sense and move cycles\n",
+    "    p = sense(p,measurements[i])\n",
+    "    p = move(p, motions[i])\n",
+    "print (p)"
    ]
   },
   {
