--- a/Localization- Basic.ipynb
+++ b/Localization- Basic.ipynb
@@ -170,18 +170,124 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4 Two dimension localization"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# generate the 2D map\n",
+    "colors = [['green', 'green', 'green'],\n",
+    "          ['green', 'red', 'red'],\n",
+    "          ['green', 'green', 'green']]\n",
+    "\n",
+    "# measurement\n",
+    "measurements = ['red']\n",
+    "\n",
+    "motions = [[0,0]]\n",
+    "\n",
+    "sensor_right = 0.8\n",
+    "p_move = 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['green', 'green', 'green'],\n",
+       " ['green', 'red', 'red'],\n",
+       " ['green', 'green', 'green']]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "colors"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# The function localize takes the following arguments:\n",
+    "#\n",
+    "# colors:\n",
+    "#        2D list, each entry either 'R' (for red cell) or 'G' (for green cell)\n",
+    "#\n",
+    "# measurements:\n",
+    "#        list of measurements taken by the robot, each entry either 'R' or 'G'\n",
+    "#\n",
+    "# motions:\n",
+    "#        list of actions taken by the robot, each entry of the form [dy,dx],\n",
+    "#        where dx refers to the change in the x-direction (positive meaning\n",
+    "#        movement to the right) and dy refers to the change in the y-direction\n",
+    "#        (positive meaning movement downward)\n",
+    "#        NOTE: the *first* coordinate is change in y; the *second* coordinate is\n",
+    "#              change in x\n",
+    "#\n",
+    "# sensor_right:\n",
+    "#        float between 0 and 1, giving the probability that any given\n",
+    "#        measurement is correct; the probability that the measurement is\n",
+    "#        incorrect is 1-sensor_right\n",
+    "#\n",
+    "# p_move:\n",
+    "#        float between 0 and 1, giving the probability that any given movement\n",
+    "#        command takes place; the probability that the movement command fails\n",
+    "#        (and the robot remains still) is 1-p_move; the robot will NOT overshoot\n",
+    "#        its destination in this exercise\n",
+    "#\n",
+    "# The function should RETURN (not just show or print) a 2D list (of the same\n",
+    "# dimensions as colors) that gives the probabilities that the robot occupies\n",
+    "# each cell in the world.\n",
+    "#\n",
+    "# Compute the probabilities by assuming the robot initially has a uniform\n",
+    "# probability of being in any cell.\n",
+    "#\n",
+    "# Also assume that at each step, the robot:\n",
+    "# 1) first makes a movement,\n",
+    "# 2) then takes a measurement.\n",
+    "#\n",
+    "# Motion:\n",
+    "#  [0,0] - stay\n",
+    "#  [0,1] - right\n",
+    "#  [0,-1] - left\n",
+    "#  [1,0] - down\n",
+    "#  [-1,0] - up\n",
+    "\n",
+    "def localize(colors, measurements, motions, sensor_right, p_move):\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "#############################################################\n",
+    "# For the following test case, your output should be \n",
+    "# [[0.01105, 0.02464, 0.06799, 0.04472, 0.02465],\n",
+    "#  [0.00715, 0.01017, 0.08696, 0.07988, 0.00935],\n",
+    "#  [0.00739, 0.00894, 0.11272, 0.35350, 0.04065],\n",
+    "#  [0.00910, 0.00715, 0.01434, 0.04313, 0.03642]]\n",
+    "# (within a tolerance of +/- 0.001 for each entry)\n",
+    "    \n",
+    "colors = [['R','G','G','R','R'],\n",
+    "          ['R','R','G','R','R'],\n",
+    "          ['R','R','G','G','R'],\n",
+    "          ['R','R','R','R','R']]\n",
+    "measurements = ['G','G','G','G','G']\n",
+    "motions = [[0,0],[0,1],[1,0],[1,0],[0,1]]"
+   ]
   }
  ],
  "metadata": {
