--- a/Localization- Basic.ipynb
+++ b/Localization- Basic.ipynb
@@ -220,9 +220,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-4-070ab6c3d397>, line 57)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-4-070ab6c3d397>\"\u001b[1;36m, line \u001b[1;32m57\u001b[0m\n\u001b[1;33m    colors = [['R','G','G','R','R'],\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "# The function localize takes the following arguments:\n",
     "#\n",
@@ -270,7 +279,13 @@
     "#  [-1,0] - up\n",
     "\n",
     "def localize(colors, measurements, motions, sensor_right, p_move):\n",
-    "    \n",
+    "    for i in range(len(motions)):\n",
+    "        \n",
+    "        for j in range(len(colors)):\n",
+    "        color = []\n",
+    "        # detect the motion direction dy direction\n",
+    "        dy = motions[i][0]\n",
+    "        new = colors[(j-dx)%len(colors)]\n",
     "    \n",
     "    \n",
     "#############################################################\n",
@@ -280,7 +295,6 @@
     "#  [0.00739, 0.00894, 0.11272, 0.35350, 0.04065],\n",
     "#  [0.00910, 0.00715, 0.01434, 0.04313, 0.03642]]\n",
     "# (within a tolerance of +/- 0.001 for each entry)\n",
-    "    \n",
     "colors = [['R','G','G','R','R'],\n",
     "          ['R','R','G','R','R'],\n",
     "          ['R','R','G','G','R'],\n",
@@ -288,6 +302,45 @@
     "measurements = ['G','G','G','G','G']\n",
     "motions = [[0,0],[0,1],[1,0],[1,0],[0,1]]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colors = [['R','G','G','R','R'],\n",
+    "          ['R','R','G','R','R'],\n",
+    "          ['R','R','G','G','R'],\n",
+    "          ['R','R','R','R','R']]\n",
+    "measurements = ['G','G','G','G','G']\n",
+    "motions = [[0,0],[0,1],[1,0],[1,0],[0,1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
