--- a/Localization- Basic.ipynb
+++ b/Localization- Basic.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,7 @@
     "        hit = (world[i]==Z)     # compare the landmark and the measurement\n",
     "        q.append(hit * pHit * p[i] + (1 - hit) * pMiss * p[i])   # probability product\n",
     "    \n",
+    "    print(q)\n",
     "    # normalization for the posterior probability\n",
     "    s = sum(q)                                       \n",
     "    q = [q[i]/s for i in range(len(p))]\n",
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,9 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.04000000000000001, 0.12, 0.12, 0.04000000000000001, 0.04000000000000001]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -68,7 +76,7 @@
        " 0.1111111111111111]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,14 +87,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0.04000000000000001, 0.12, 0.12, 0.04000000000000001, 0.04000000000000001]\n",
       "[0.1111111111111111, 0.3333333333333332, 0.3333333333333332, 0.1111111111111111, 0.1111111111111111]\n",
+      "[0.022222222222222223, 0.19999999999999993, 0.19999999999999993, 0.022222222222222223, 0.022222222222222223]\n",
       "[0.047619047619047644, 0.4285714285714286, 0.4285714285714286, 0.047619047619047644, 0.047619047619047644]\n"
      ]
     }
@@ -109,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,13 +151,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0.04000000000000001, 0.12, 0.12, 0.04000000000000001, 0.04000000000000001]\n",
+      "[0.022222222222222227, 0.08, 0.1866666666666666, 0.06222222222222221, 0.02666666666666666]\n",
       "[0.07882352941176471, 0.07529411764705884, 0.22470588235294123, 0.4329411764705882, 0.18823529411764706]\n"
      ]
     }
@@ -178,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +221,7 @@
        " ['green', 'green', 'green']]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,18 +232,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-4-070ab6c3d397>, line 57)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-4-070ab6c3d397>\"\u001b[1;36m, line \u001b[1;32m57\u001b[0m\n\u001b[1;33m    colors = [['R','G','G','R','R'],\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The function localize takes the following arguments:\n",
     "#\n",
@@ -279,15 +282,91 @@
     "#  [-1,0] - up\n",
     "\n",
     "def localize(colors, measurements, motions, sensor_right, p_move):\n",
-    "    for i in range(len(motions)):\n",
-    "        \n",
-    "        for j in range(len(colors)):\n",
-    "        color = []\n",
-    "        # detect the motion direction dy direction\n",
-    "        dy = motions[i][0]\n",
-    "        new = colors[(j-dx)%len(colors)]\n",
+    "    \"\"\"\n",
+    "    Arguments: colors --- the map of the landmark\n",
+    "               meaurements --- the measurement update\n",
+    "               motions --- the motion update\n",
+    "               sensor_right --- the probability of sensor\n",
+    "               p_move --- the probability of th movement\n",
     "    \n",
+    "    Return: the probability of the location output\n",
+    "    \"\"\"\n",
+    "    q = []\n",
+    "    # we only need to update the motion for once\n",
+    "    # y direction motion update\n",
     "    \n",
+    "    if motions[0] != 0:        # check if the dy direction is True\n",
+    "        for i in range(len(colors)):   # iterate the row\n",
+    "            # check the motion in y direction \n",
+    "            stack = []\n",
+    "            for j in range(len(colors[0])):\n",
+    "                dy = motions[0]        # dy direction movement\n",
+    "                # robot movement and stand still\n",
+    "                cov = p[(i-dy)% len(colors)][j] * p_move    # robot movement\n",
+    "                cov = cov + p[i][j] * (1 - p_move)          # robot stand still\n",
+    "                stack.append(cov)  # convolution\n",
+    "            q.append(stack)\n",
+    "\n",
+    "    # check the motion in dx direction\n",
+    "    if motions[1] != 0:      # dx direction movement\n",
+    "            for i in range(len(colors)):   # iterate the row\n",
+    "                stack = []\n",
+    "                for j in range(len(colors[0])):   # iterate the column of the matrix\n",
+    "                    dx = motions[1]\n",
+    "                    # robot movement and stand still\n",
+    "                    cov = p[i][(j-dx) % len(colors[0])] * p_move   # robot movement\n",
+    "                    cov = cov + p[i][j] * (1 - p_move)             # robot stand still\n",
+    "                    stack.append(cov)\n",
+    "                q.append(stack)\n",
+    "    \n",
+    "    # initialization for the p\n",
+    "    if (motions[1] == 0 & motion[0] == 0):\n",
+    "        q = p\n",
+    "\n",
+    "    # the measurement update for the calculations\n",
+    "    for i in range(len(colors)):                # iterate the rows\n",
+    "        for j in range(len(colors[0])):         # iterate the columns\n",
+    "            hit = (measurements==colors[i][j])  #  define a threshold for the measurement \n",
+    "            q[i][j] = (hit * q[i][j] * sensor_right + (1 - hit) * q[i][j] * (1 - sensor_right))\n",
+    "    \n",
+    "    Sum = 0\n",
+    "    # normalization for the probability\n",
+    "    for i in range(len(q)):\n",
+    "        for j in range(len(q[0])):\n",
+    "            Sum +=q[i][j]\n",
+    "    stack = []\n",
+    "    for i in range(len(q)):\n",
+    "        for j in range(len(q[0])):\n",
+    "            stack.append( q[i][j]/ Sum)\n",
+    "    \n",
+    "    ##check why we cannot ues the assignment here,???WTF\n",
+    "    q = np.array(stack).reshape((4,5))\n",
+    "            \n",
+    "    return q\n",
+    "\n",
+    "\n",
+    "def show(p):\n",
+    "    rows = ['[' + ','.join(map(lambda x: '{0:.5f}'.format(x),r)) + ']' for r in p]\n",
+    "    print ('[' + ',\\n '.join(rows) + ']')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.00345,0.01745,0.10455,0.08734,0.01660],\n",
+      " [0.00345,0.00196,0.05304,0.08734,0.01660],\n",
+      " [0.00345,0.00196,0.05304,0.31186,0.20186],\n",
+      " [0.00345,0.00196,0.00353,0.01052,0.01660]]\n"
+     ]
+    }
+   ],
+   "source": [
     "#############################################################\n",
     "# For the following test case, your output should be \n",
     "# [[0.01105, 0.02464, 0.06799, 0.04472, 0.02465],\n",
@@ -300,39 +379,189 @@
     "          ['R','R','G','G','R'],\n",
     "          ['R','R','R','R','R']]\n",
     "measurements = ['G','G','G','G','G']\n",
-    "motions = [[0,0],[0,1],[1,0],[1,0],[0,1]]"
+    "motions = [[0,0],[0,1],[1,0],[1,0],[0,1]]\n",
+    "\n",
+    "# define a initial probability for the calculation\n",
+    "pr = 1./20\n",
+    "p = [[pr]*5]*4\n",
+    "\n",
+    "for i in range(len(motions)):\n",
+    "    measurement = measurements[i]\n",
+    "    motion = motions[i]\n",
+    "    sensor_right = 0.7\n",
+    "    p_move = 0.8\n",
+    "    p = localize(colors, measurement, motion, sensor_right, p_move)\n",
+    "show (p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = 0\n",
+    "for i in range(len(p)):\n",
+    "    for j in range(len(p[0])):\n",
+    "        c += p[i][j]\n",
+    "\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.4 Motion for 2D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Define function for 2D movement\n",
+    "\n",
+    "\n",
+    "def motion2D(p, motions):\n",
+    "\n",
+    "    q = []\n",
+    "    # we only need to update the motion for once\n",
+    "    # y direction motion update\n",
+    "\n",
+    "    if motions[0] != 0:        # check if the dy direction is True\n",
+    "        for i in range(len(colors)):   # iterate the row\n",
+    "            # check the motion in y direction \n",
+    "            stack = []\n",
+    "            for j in range(len(colors[0])):\n",
+    "                dy = motions[0]        # dy direction movement\n",
+    "                # robot movement and stand still\n",
+    "                cov = p[(i-dy)% len(colors)][j] * p_move    # robot movement\n",
+    "                cov = cov + p[i][j] * (1 - p_move)          # robot stand still\n",
+    "                stack.append(cov)  # convolution\n",
+    "            q.append(stack)\n",
+    "\n",
+    "    # check the motion in dx direction\n",
+    "    if motions[1] != 0:      # dx direction movement\n",
+    "            for i in range(len(colors)):   # iterate the row\n",
+    "                stack = []\n",
+    "                for j in range(len(colors[0])):   # iterate the column of the matrix\n",
+    "                    dx = motions[1]\n",
+    "                    # robot movement and stand still\n",
+    "                    cov = p[i][(j-dx) % len(colors[0])] * p_move   # robot movement\n",
+    "                    cov = cov + p[i][j] * (1 - p_move)             # robot stand still\n",
+    "                    stack.append(cov)\n",
+    "                q.append(stack)\n",
+    "\n",
+    "    # initialization for the p\n",
+    "    if (motions[1] == 0 & motion[0] == 0):\n",
+    "        q = p\n",
+    "    return q"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.5 Define function for 2D measurement update"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## function for 2D measurement update\n",
+    "\n",
+    "def update2D(p, measurements):\n",
+    "    # initialization for the p\n",
+    "    if (motions[1] == 0 & motion[0] == 0):\n",
+    "        q = p\n",
+    "\n",
+    "    # the measurement update for the calculations\n",
+    "    for i in range(len(colors)):                # iterate the rows\n",
+    "        for j in range(len(colors[0])):         # iterate the columns\n",
+    "            hit = (measurements==colors[i][j])  #  define a threshold for the measurement \n",
+    "            q[i][j] = (hit * q[i][j] * sensor_right + (1 - hit) * q[i][j] * (1 - sensor_right))\n",
+    "    \n",
+    "    Sum = 0\n",
+    "    # normalization for the probability\n",
+    "    for i in range(len(q)):\n",
+    "        for j in range(len(q[0])):\n",
+    "            Sum +=q[i][j]\n",
+    "    stack = []\n",
+    "    for i in range(len(q)):\n",
+    "        for j in range(len(q[0])):\n",
+    "            stack.append( q[i][j]/ Sum)\n",
+    "    \n",
+    "    ##check why we cannot ues the assignment here,???WTF\n",
+    "    q = np.array(stack).reshape((4,5))\n",
+    "    \n",
+    "    return q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def localize(colors, measurements, motions, sensor_right, p_move):\n",
+    "    for i in range(len(motions)):\n",
+    "        measurement = measurements[i]\n",
+    "        motion = motions[i]\n",
+    "        p = motion2D(p, motion)\n",
+    "        p = update2D(p, measurement)\n",
+    "    return p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'p' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-93-1f7f082a21f3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mpr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1.\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mpr\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlocalize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcolors\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmeasurements\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmotions\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msensor_right\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.7\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mp_move\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.8\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# displays your answer\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-92-130146dec7f1>\u001b[0m in \u001b[0;36mlocalize\u001b[1;34m(colors, measurements, motions, sensor_right, p_move)\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[0mmeasurement\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmeasurements\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[0mmotion\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmotions\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m         \u001b[0mp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmotion2D\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmotion\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m         \u001b[0mp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mupdate2D\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmeasurement\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'p' referenced before assignment"
+     ]
+    }
+   ],
    "source": [
     "colors = [['R','G','G','R','R'],\n",
     "          ['R','R','G','R','R'],\n",
     "          ['R','R','G','G','R'],\n",
     "          ['R','R','R','R','R']]\n",
     "measurements = ['G','G','G','G','G']\n",
-    "motions = [[0,0],[0,1],[1,0],[1,0],[0,1]]"
+    "motions = [[0,0],[0,1],[1,0],[1,0],[0,1]]\n",
+    "# define a initial probability for the calculation\n",
+    "pr = 1./20\n",
+    "p = [[pr]*5]*4\n",
+    "c = localize(colors,measurements,motions,sensor_right = 0.7, p_move = 0.8)\n",
+    "show(c) # displays your answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
