--- a/Localization- Basic.ipynb
+++ b/Localization- Basic.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        " 0.1111111111111111]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        " ['green', 'green', 'green']]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,26 +294,24 @@
     "    stack = [[0.0 for col in range(len(colors[0]))] for row in range(len(colors))]\n",
     "    # we only need to update the motion for once\n",
     "    # y direction motion update\n",
+    "    dy = motions[0]        # dy direction movement\n",
+    "    dx = motions[1]        # dx direction movement\n",
     "    \n",
-    "    if motions[0] != 0:        # check if the dy direction is True\n",
-    "        dy = motions[0]        # dy direction movement\n",
-    "        for i in range(len(colors)):   # iterate the row\n",
-    "            # check the motion in y direction \n",
-    "            for j in range(len(colors[0])):\n",
-    "                # robot movement and stand still\n",
-    "                cov = p[(i-dy)% len(colors)][j] * p_move    # robot movement\n",
-    "                cov = cov + p[i][j] * (1 - p_move)          # robot stand still\n",
-    "                stack[i][j] = cov  # convolution\n",
-    "    \n",
+    "    for i in range(len(colors)):   # iterate the row\n",
+    "    # check the motion in y direction \n",
+    "        for j in range(len(colors[i])):\n",
+    "            # robot movement and stand still\n",
+    "            cov = p[(i-dy)% len(colors)][j] * p_move    # robot movement\n",
+    "            cov += p[i][j] * (1 - p_move)               # robot stand still\n",
+    "            stack[i][j] = cov  # convolution\n",
+    "\n",
     "    # check the motion in dx direction\n",
-    "    if motions[1] != 0:      # dx direction movement\n",
-    "        dx = motions[1]\n",
-    "        for i in range(len(colors)):   # iterate the row\n",
-    "            for j in range(len(colors[0])):   # iterate the column of the matrix\n",
-    "                # robot movement and stand still\n",
-    "                cov = p[i][(j-dx) % len(colors[0])] * p_move   # robot movement\n",
-    "                cov = cov + p[i][j] * (1 - p_move)             # robot stand still\n",
-    "                stack[i][j] = cov\n",
+    "    for i in range(len(colors)):   # iterate the row\n",
+    "        for j in range(len(colors[i])):   # iterate the column of the matrix\n",
+    "            # robot movement and stand still\n",
+    "            cov = p[i][(j-dx) % len(colors[0])] * p_move   # robot movement\n",
+    "            cov += p[i][j] * (1 - p_move)                  # robot stand still\n",
+    "            stack[i][j] = cov\n",
     "    \n",
     "    # the measurement update for the calculations\n",
     "    aux = [[0.0 for col in range(len(p[0]))] for row in range(len(p))]\n",
@@ -332,7 +330,6 @@
     "   \n",
     "    return aux\n",
     "\n",
-    "\n",
     "def show(p):\n",
     "    rows = ['[' + ','.join(map(lambda x: '{0:.5f}'.format(x),r)) + ']' for r in p]\n",
     "    print ('[' + ',\\n '.join(rows) + ']')"
@@ -340,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -371,21 +368,20 @@
     "motions = [[0,0],[0,1],[1,0],[1,0],[0,1]]\n",
     "\n",
     "# define a initial probability for the calculation\n",
-    "pr = 1./20\n",
-    "p = [[pr]*5]*4\n",
+    "pinit = 1./ float(len(colors[0]))/float(len(colors))\n",
+    "p = [[pinit for col in range(len(colors[0]))] for row in range(len(colors))]\n",
+    "\n",
+    "sensor_right = 0.7\n",
+    "p_move = 0.8\n",
     "\n",
     "for i in range(len(motions)):\n",
-    "    measurement = measurements[i]\n",
-    "    motion = motions[i]\n",
-    "    sensor_right = 0.7\n",
-    "    p_move = 0.8\n",
-    "    p = localize(colors, measurement, motion, sensor_right, p_move)\n",
+    "    p = localize(colors, measurements[i], motions[i], sensor_right, p_move)\n",
     "show (p)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,36 +418,41 @@
     "\n",
     "def motion2D(p, motions):\n",
     "\n",
-    "    q = []\n",
+    "    stack = [[0.0 for col in range(len(colors[0]))] for row in range(len(colors))]\n",
     "    # we only need to update the motion for once\n",
     "    # y direction motion update\n",
-    "\n",
-    "    # check if the motion along y direction\n",
-    "    if motions[0] != 0:        \n",
-    "        dy = motions[0]        # dy direction movement step and direction\n",
-    "        # if along y direction, then iterate the row\n",
-    "        for i in range(len(colors)):   # iterate the row \n",
-    "            # define a stack to restore row elements\n",
-    "            stack = []\n",
-    "            # iterate along the columns element in i-row\n",
+    "    \n",
+    "    if motions[0] != 0:        # check if the dy direction is True\n",
+    "        dy = motions[0]        # dy direction movement\n",
+    "        for i in range(len(colors)):   # iterate the row\n",
+    "            # check the motion in y direction \n",
     "            for j in range(len(colors[0])):\n",
     "                # robot movement and stand still\n",
+    "                print(p[(i-dy)% len(colors)][j])\n",
     "                cov = p[(i-dy)% len(colors)][j] * p_move    # robot movement\n",
     "                cov = cov + p[i][j] * (1 - p_move)          # robot stand still\n",
-    "                stack.append(cov)  # convolution\n",
-    "            q.append(stack)\n",
-    "\n",
-    "    # check if the motion along x direction\n",
-    "    if motions[1] != 0:\n",
+    "                stack[i][j] = cov  # convolution\n",
+    "    \n",
+    "    # check the motion in dx direction\n",
+    "    if motions[1] != 0:      # dx direction movement\n",
     "        dx = motions[1]\n",
     "        for i in range(len(colors)):   # iterate the row\n",
-    "            stack = []\n",
     "            for j in range(len(colors[0])):   # iterate the column of the matrix\n",
     "                # robot movement and stand still\n",
-    "                cov = p[i][(j-dx) % len(colors[0])] * p_move   # robot movement\n",
+    "                print(p[i][(j-dx) % len(colors[i])])\n",
+    "                \n",
+    "                cov = p[i][(j-dx) % len(colors[i])] * p_move   # robot movement\n",
     "                cov = cov + p[i][j] * (1 - p_move)             # robot stand still\n",
-    "                stack.append(cov)\n",
-    "            q.append(stack)\n",
+    "                stack[i][j] = cov\n",
+    "    \n",
+    "    # the measurement update for the calculations\n",
+    "    aux = [[0.0 for col in range(len(p[0]))] for row in range(len(p))]\n",
+    "    Sum = 0\n",
+    "    for i in range(len(colors)):                # iterate the rows\n",
+    "        for j in range(len(colors[i])):         # iterate the columns\n",
+    "            hit = (measurements==colors[i][j])  #  define a threshold for the measurement \n",
+    "            aux[i][j] = (hit * p[i][j] * sensor_right + (1 - hit) * p[i][j] * (1 - sensor_right))\n",
+    "            Sum += aux[i][j]\n",
     "\n",
     "    # initialization for the p\n",
     "    if (motions[1] == 0 & motion[0] == 0):\n",
@@ -468,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,26 +510,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'q' referenced before assignment",
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'int' and 'list'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-24-91fa9df32ff0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0msensor_right\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.7\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mp_move\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.8\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlocalize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcolors\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmeasurements\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmotions\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msensor_right\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mp_move\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# displays your answer\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-21-ab059531cf4f>\u001b[0m in \u001b[0;36mlocalize\u001b[1;34m(colors, measurements, motions, sensor_right, p_move)\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[0mmeasurement\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmeasurements\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[0mmotion\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmotions\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m         \u001b[0mq\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmotion2D\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mq\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmotion\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m         \u001b[0mp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mupdate2D\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mq\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmeasurement\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'q' referenced before assignment"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-95-91fa9df32ff0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0msensor_right\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.7\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mp_move\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0.8\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlocalize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcolors\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmeasurements\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmotions\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msensor_right\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mp_move\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# displays your answer\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-72-ef6cc97d1398>\u001b[0m in \u001b[0;36mlocalize\u001b[1;34m(colors, measurements, motions, sensor_right, p_move)\u001b[0m\n\u001b[0;32m     64\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcolors\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     65\u001b[0m                 \u001b[1;31m# robot movement and stand still\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 66\u001b[1;33m                 \u001b[0mcov\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mdy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m%\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcolors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mp_move\u001b[0m    \u001b[1;31m# robot movement\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     67\u001b[0m                 \u001b[0mcov\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcov\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m*\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mp_move\u001b[0m\u001b[1;33m)\u001b[0m          \u001b[1;31m# robot stand still\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     68\u001b[0m                 \u001b[0mstack\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcov\u001b[0m  \u001b[1;31m# convolution\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'int' and 'list'"
      ]
     }
    ],
@@ -598,22 +592,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "4"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "5%5"
+    "len(colors)"
    ]
   },
   {
